# faust-demo

./: .gitignore  Dockerfile  README.md  audit.py  autotag.py  docker-compose.yml  echo.py  image_extraction.py  pyproject.toml  scale_ai.py  setup.cfg  sqs_consumer.py  sqs_producer.py
workers/: audit.py  autotag.py  echo.py  image_extraction.py  scale_ai.py  settings.py  sqs_consumer.py  sqs_producer.py  utils.py
workers/avro_codecs/: avro.py
workers/codecs/: avro.py
workers/models/: audit.py  enums.py  video.py
